ComplexMetadata: switched iddoc values to String; refs #11312